k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website
  namespace: personal-website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "gerardosalazar.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website
            port:
              number: 80
